Bug 1057199 - Fix signed/unsigned error when calculating position in opensl_stream_get_position(). r=cpearce